--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,8 +1,7 @@
-use_frameworks!
+#use_frameworks!
 
 target 'ThirdPayModule_Example' do
   pod 'ThirdPayModule', :path => '../'
-
   target 'ThirdPayModule_Tests' do
     inherit! :search_paths
 
